--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -1,21 +1,31 @@
+  
 <h1>Update Pet</h1>
-<h3><%= @pet.name %></h3>
 
-<form action="/pets/<%= @pet.id %>" method="POST">
-<input type="hidden" id="hidden" name="_method" value="patch">
+<form action="/pets/<%=@pet.id%>" method="POST">
+  <label>Name:</label>
 
-<label>Pet Name: </label>
-<input type="text" name="pet[name]" id="pet_name" value="<%= @pet.name %>">
+  <br></br>
 
-<h3>Who is the owner for this pet?</h3>
-<% @owners.each do |owner| %>
-<input type="radio" name="owner[id]" id="<%= owner.id %>" value="<%= owner.id %>" <%='checked' if owner.pets.include?(@pet) %>><%= owner.name %><br>
-<% end %>
+  <input type="text" name="pet[name]" id="pet_name" value="<%=@pet.name%>">
 
-<h3>Make a new Owner</h3>
-<label>Owner Name:</label>
-<input type="text" name="owner[name]" id="owner_name">
+  <br></br>
 
-<br><br>
-<input type="submit" value="Update Pet">
+  <label>Choose an existing owner:</label>
+  <br></br>
+
+  <% Owner.all.each do |owner| %>
+    <input type="radio" name="pet[owner_id]" value="<%=owner.id%>" id="<%=owner.id%>" <%='checked' if @pet.owner == owner %>>
+    <%=owner.name%>
+    </input>
+  <% end %>
+
+  <br></br>
+  <label>and/or, create a new owner:</label>
+  <br></br>
+  <label>Name:</label>
+    <input type="text" name="owner[name]" id="owner_name"></input>
+
+  <br></br>
+
+  <input type="submit" value="Update Pet">
 </form>
